# UnityLibPD

./: README.md
Native/: .gitignore  Android.mk  AndroidPluginAudio.mk  CMakeLists.txt  readme.txt
Native/AudioPluginLibPD.xcodeproj/: project.pbxproj
Native/AudioPluginLibPD.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Native/AudioPluginLibPD.xcodeproj/project.xcworkspace/xcuserdata/MacBookPro.xcuserdatad/: UserInterfaceState.xcuserstate
Native/AudioPluginLibPD.xcodeproj/project.xcworkspace/xcuserdata/etienne.xcuserdatad/: UserInterfaceState.xcuserstate
Native/AudioPluginLibPD.xcodeproj/xcuserdata/MacBookPro.xcuserdatad/xcschemes/: AudioPluginLibPD.xcscheme  xcschememanagement.plist
Native/AudioPluginLibPD.xcodeproj/xcuserdata/etienne.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Native/AudioPluginLibPD.xcodeproj/xcuserdata/etienne.xcuserdatad/xcschemes/: UnityLibPD.xcscheme  xcschememanagement.plist
Native/UnityLibPd/: Info.plist
Native/cpp/: PdBase.cpp  PdBase.hpp  PdReceiver.hpp
Native/jni/: Application.mk
Native/src/: AudioPluginInterface.h  AudioPluginUtil.cpp  AudioPluginUtil.h  AudioPlugin_LibPD.cpp  PluginList.h  Plugin_LibPD.cpp  Plugin_LibPD.h  UnityPdReceiver.cpp  UnityPdReceiver.h
Unity/Assets/Audio/: Mixer.mixer
Unity/Assets/Plugins/AudioPluginLibPD.bundle/Contents/: Info.plist
Unity/Assets/Plugins/AudioPluginLibPD.bundle/Contents/MacOS/: AudioPluginLibPD
Unity/Assets/Plugins/AudioPluginLibPD.bundle/Contents/Resources/: notes.txt
Unity/Assets/Scenes/: Demo.unity  Demo_ADCFrequency.unity
Unity/Assets/Scripts/: ADC_FrequencyTest.cs  ADC_FrequencytTest.cs  LibPD.cs  TestLibPD.cs
Unity/Assets/StreamingAssets/: ADC_FreqTest.pd  loop.pd
Unity/ProjectSettings/: AudioManager.asset  EditorBuildSettings.asset  ProjectSettings.asset
